# alembic-sample

./: Docker-Compose.yml  alembic.ini  pyproject.toml
migrations/: env.py  models.py
migrations/versions/: 55f35288c731_add_area.py  700e787a3a40_init_tables.py
